Added title, authors, and paper and data description

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -1,10 +1,10 @@
-@article{lindquist2008statistical,
-  title={The statistical analysis of fMRI data},
-  author={Lindquist, Martin A and others},
-  journal={Statistical Science},
-  volume={23},
-  number={4},
-  pages={439--464},
-  year={2008},
-  publisher={Institute of Mathematical Statistics}
+@article{kahnemantversky,
+  title={Prospect Theory: An Analysis of Decision Under Risk},
+  author={Kahneman and Tversky},
+  journal={Econometrica},
+  volume={47},
+  number={2},
+  pages={263--292},
+  year={1979},
+  publisher={The Econometric Society}
 }
