Adding approach to proposal; adding Lindquist to references

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -8,3 +8,13 @@
   year={1979},
   publisher={The Econometric Society}
 }
+@article{lindquist,
+  title={The Statistical Analysis of fMRI Data},
+  author={Lindquist},
+  journal={Statistical Science},
+  volume={23},
+  number={4},
+  pages={439--464},
+  year={2008},
+  publisher={Institute of Mathematical Statistics}
+}
