--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -40,11 +40,16 @@ age of 22---three trials of the ``mixed gambles task'' are performed. The
 for each subject and trial. We successfully loaded several
 \lstinline{bold.nii.gz} files, which have a shape of (64, 64, 34, 240).
 
-Briefly explain what approach you intend to take for exploring
-the data and paper.  If you intend to ``reproduce'' some aspect of the paper,
-explain in exactly what sense you mean to do this.  If you are thinking about
-validating the data describe the assumpution used in the analysis and indicate
-how you might check them.
+Our goal is to reproduce Tom, Fox, Trepel, and Poldrak's findings based on
+their whole-brain statistical analysis. The authors use two modeling approaches
+for this---parametric and matrix analyses. We plan to investigate those
+methods, but, given our limited exposure to them, will rely on simpler, though
+equally valid, approaches. This will partly depend on the results from our
+exploratory data analysis as well as on algorithms we're able to implement or
+find Python packages for. Prior to any analysis, we will dedicate a substantial
+portion of our efforts on preparing the data. We plan to use Lindquist's paper
+on the statistical analysis of fMRI data\cite{lindquist} as a starting point
+that will guide how we approach this and other aspects of our analysis.
 
 \bibliography{proposal}
 
