editing last paragraph

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -42,14 +42,15 @@ for each subject and trial. We successfully loaded several
 
 Our goal is to reproduce Tom, Fox, Trepel, and Poldrak's findings based on
 their whole-brain statistical analysis. The authors use two modeling approaches
-for this---parametric and matrix analyses. We plan to investigate those
-methods, but, given our limited exposure to them, will rely on simpler, though
-equally valid, approaches. This will partly depend on the results from our
+for this---parametric and matrix analyses. We plan to investigate and reproduce 
+those methods. Given our limited exposure to them, we may also rely on simpler 
+but equally valid approaches. This will partly depend on the results from our
 exploratory data analysis as well as on algorithms we're able to implement or
 find Python packages for. Prior to any analysis, we will dedicate a substantial
-portion of our efforts on preparing the data. We plan to use Lindquist's paper
-on the statistical analysis of fMRI data\cite{lindquist} as a starting point
-that will guide how we approach this and other aspects of our analysis.
+portion of our efforts to preparing, cleaning, and aggregating the data. We plan 
+to use Lindquist's paper on the statistical analysis of fMRI data\cite{lindquist} 
+as a starting point that will guide us while we approach this and other aspects 
+of our analysis.
 
 \bibliography{proposal}
 
