--- a/paper/report.tex
+++ b/paper/report.tex
@@ -4,17 +4,20 @@
 
 \title{The title of your project proposal}
 \author{
-  LastName1, FirstName1\\
-  \texttt{github1}
+  Jara, Jon\\
+  \texttt{jonmigueljara}
   \and
-  LastName2, FirstName2\\
-  \texttt{github2}
+  Sanderson, Will\\
+  \texttt{wtsanderson}
   \and
-  LastName3, FirstName3\\
-  \texttt{github3}
+  Shishido, Juan\\
+  \texttt{juanshishido}
   \and
-  LastName4, FirstName4\\
-  \texttt{github4}
+  Wu, Paul\\
+  \texttt{yuanyiwu}
+  \and
+  Xu, Wendy\\
+  \texttt{berithsu}
 }
 
 \bibliographystyle{siam}
