Revert "updating report" revert This reverts commit 0191b509b1d874c16870033b8db6567721aa91a7.

--- a/paper/report.tex
+++ b/paper/report.tex
@@ -4,20 +4,17 @@
 
 \title{The title of your project proposal}
 \author{
-  Jara, Jon\\
-  \texttt{jonmigueljara}
+  LastName1, FirstName1\\
+  \texttt{github1}
   \and
-  Sanderson, Will\\
-  \texttt{wtsanderson}
+  LastName2, FirstName2\\
+  \texttt{github2}
   \and
-  Shishido, Juan\\
-  \texttt{juanshishido}
+  LastName3, FirstName3\\
+  \texttt{github3}
   \and
-  Wu, Paul\\
-  \texttt{yuanyiwu}
-  \and
-  Xu, Wendy\\
-  \texttt{berithsu}
+  LastName4, FirstName4\\
+  \texttt{github4}
 }
 
 \bibliographystyle{siam}
