--- a/paper/project.bib
+++ b/paper/project.bib
@@ -1,12 +1,22 @@
 @article{Tom26012007,
-author = {Tom, Sabrina M. and Fox, Craig R. and Trepel, Christopher and Poldrack, Russell A.}, 
+author = {Tom, Sabrina M. and Fox, Craig R. and Trepel, Christopher and 
+Poldrack, Russell A.}, 
 title = {The Neural Basis of Loss Aversion in Decision-Making Under Risk},
 volume = {315}, 
 number = {5811}, 
 pages = {515-518}, 
 year = {2007}, 
 doi = {10.1126/science.1134239}, 
-abstract ={People typically exhibit greater sensitivity to losses than to equivalent gains when making decisions. We investigated neural correlates of loss aversion while individuals decided whether to accept or reject gambles that offered a 50/50 chance of gaining or losing money. A broad set of areas (including midbrain dopaminergic regions and their targets) showed increasing activity as potential gains increased. Potential losses were represented by decreasing activity in several of these same gain-sensitive areas. Finally, individual differences in behavioral loss aversion were predicted by a measure of neural loss aversion in several regions, including the ventral striatum and prefrontal cortex.}, 
+abstract ={People typically exhibit greater sensitivity to losses than to 
+equivalent gains when making decisions. We investigated neural correlates of 
+loss aversion while individuals decided whether to accept or reject gambles 
+that offered a 50/50 chance of gaining or losing money. A broad set of areas 
+(including midbrain dopaminergic regions and their targets) showed increasing 
+activity as potential gains increased. Potential losses were represented by 
+decreasing activity in several of these same gain-sensitive areas. Finally, 
+individual differences in behavioral loss aversion were predicted by a measure 
+of neural loss aversion in several regions, including the ventral striatum and 
+prefrontal cortex.}, 
 URL = {http://www.sciencemag.org/content/315/5811/515.abstract}, 
 eprint = {http://www.sciencemag.org/content/315/5811/515.full.pdf}, 
 journal = {Science} 
