--- a/paper/report.tex
+++ b/paper/report.tex
@@ -70,15 +70,59 @@ The subject’s fMRI data generated during the tasks is available for each run.
 
 \subsection{Acquiring}
 
+A primary goal of ours is to ensure that individuals who wish to replicate or
+improve upon our work can easily do so. To that end, in terms of data access,
+we have created a bash script that fetches the data from www.openfmri.org and
+untars it. It runs only if the data directory doesn't already exist. The script
+also downloads the checksums and we've written a Python script to check that
+the hashes match. We will incorporate the Python script in the Makefile for
+downloading the data.
+
 \section{Methods}
 
 \subsection{Preprocessing}
 
+We are considering several preprocessing techniques to use on our data.
+
 \subsubsection{Smoothing}
+
+Smoothing is a process that averages data---in this case, voxels---with its
+neighbors. This is typically done using a Gaussian function. The selected width
+of the distribution determines how much the data are smoothed.
+
+There are several benefits related to smoothing. Below, we list the ones that
+are relevant for our analysis.
+
+\begin{itemize}
+  \item increased sensitivity
+  \item making the error distribution normal
+\end{itemize}
+
+We are also aware of the following disadvantages.
+
+\begin{itemize}
+  \item{reduced spatial resolution}
+  \item{edge artifacts}
+\end{itemize}
+
+Typically, for single-subject analyses, a width of 4 mm is used.
+
+%http://support.brainvoyager.com/functional-analysis-preparation/27-pre-processing/279-spatial-smoothing-in-preparation.html
 
 \subsubsection{Principle Component Analysis}
 
+We are also considering using principle component analysis (PCA) to reduce the
+dimensionality of our data. We will investigate the standard PCA approach,
+e.g., the one found in Scikit-Learn's decomposition submodule. Research by
+Viviani, Gron, and Spitzer, however, has shown that \textit{functional}
+principle component analysis is more effective than the standard approach. We 
+plan to experiment with this approach.
+
 \subsubsection{Motion Correction}
+
+Another way in which we will attempt to increase the signal from our data is to
+correct for motion. Nipy includes the function \texttt{FmriRealign4d} that
+corrects for both motion and slice timing.
 
 \subsection{Analysis}
 
