--- a/paper/report.bib
+++ b/paper/report.bib
@@ -1,3 +1,13 @@
+@article{norman,
+title={Beyond mind-reading: multi-voxel pattern analysis of fMRI data},
+author={Norman, Kenneth A. and Polyn, Sean M. and Detre, Greg J. and Haxby,
+James B.},
+journal={Trends in Cognitive Sciences},
+volume={10},
+number={9},
+pages={424-430},
+year={2006}
+}
 @article{tom,
 title={The Neural Basis of Loss Aversion in Decision-Making Under Risk},
 author={Tom, Sabrina M. and Fox, Craig R. and Trepel, Christopher and 
@@ -28,6 +38,11 @@ journal={Human Brain Mapping},
 volume={24},
 pages={109-129},
 year={2005}
+}
+@online{bvmvpa,
+author={Brain Voyager},
+title={Multi-Voxel Pattern Analysis (MVPA)},
+url={http://www.brainvoyager.com/bvqx/doc/UsersGuide/MVPA/MultiVoxelPatternAnalysisMVPA.html}
 }
 @online{bvsmoothing,
 author={Brain Voyager},
