--- a/paper/report.tex
+++ b/paper/report.tex
@@ -1,6 +1,8 @@
 \documentclass[11pt]{article}
 
 \usepackage[margin=0.75in]{geometry}
+\usepackage{graphicx}
+\graphicspath{ {images/} }
 
 \title{The title of your project proposal}
 \author{
@@ -214,6 +216,15 @@ We have identified several Python packages we will use for our analysis.
 \end{itemize}
 
 \section{Results}
+
+Thus far, we have run some initial analyses on our data. We have performed
+convolution as well as a linear regression. The following is a plot of a middle
+slice of the $\hat{\beta}_1$ of a subject's brain.
+
+\includegraphics[width=\textwidth]{beta1_middle_slice.png}
+
+We also have code for our first pass at the logistic regression using the
+behavioral data.
 
 \section{Discussion}
 
