Adding explanation of MVPA

--- a/paper/report.bib
+++ b/paper/report.bib
@@ -8,6 +8,16 @@ number={9},
 pages={424-430},
 year={2006}
 }
+@article{schreiber2013statistical,
+title={The statistical analysis of multi-voxel patterns in functional imaging},
+author={Schreiber, Kai and Krekelberg, Bart},
+journal={PloS one},
+volume={8},
+number={7},
+pages={e69328},
+year={2013},
+publisher={Public Library of Science}
+}
 @article{tom,
 title={The Neural Basis of Loss Aversion in Decision-Making Under Risk},
 author={Tom, Sabrina M. and Fox, Craig R. and Trepel, Christopher and 
