Wendy's abstract text

--- a/paper/report.tex
+++ b/paper/report.tex
@@ -22,7 +22,13 @@
 \maketitle
 
 \abstract{
-
+The goal of this research is to analyze brain activities associated with
+decision-making. In particular, we draw upon the experiment of mixed gambles to
+investigate the relationship between neural and behavioral loss aversion. The
+relationships are observed by neural activities, measured as fMRI data, when
+subjects are exposed to gambles. Our project attempts to apply linear
+regression and multi-voxel pattern analyses to study loss-and-gain sensitivity
+levels inside the brain.
 }
 
 \section{Introduction}
